--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       // getting the text value from the database
       var bigOne = document.getElementById('bigOne');
-      var dbRef = firebase.database().ref().child('text');
+      var dbRef = firebase.firestore().ref().child('text');
       dbRef.on('value', snap => bigOne.innerText = snap.val());
       </script>
   </body>
