--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
-        //firebase.analytics();
+        firebase.analytics();
 
       // getting the text value from the database
       var bigOne = document.getElementById('bigOne');
