--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
 
       <script>
+		import firebase from 'firebase/app';
+		import 'firebase/firestore';
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         var firebaseConfig = {
