--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
         <td>-</td>
     </tr>
 </table>
-<a href="./duahau.png">duahau.png</a>
+<a href="./ChiTieuHangNgay.html" target="_blank">Chi tiêu hàng ngày</a>
 </body>
 </html>
