--- a/ChiTieuHangNgay.html
+++ b/ChiTieuHangNgay.html
@@ -38,6 +38,7 @@
 			<th>Amount</th>
 			<th>Note</th>
 		</tr>
+		<!--20220720-->
 		<tr>
 			<td>1</td>
 			<td>20220720</td>
@@ -48,7 +49,7 @@
 		<tr>
 			<td>2</td>
 			<td>-</td>
-			<td>Cà phê</td>
+			<td>Cà phê Phố x10 </td>
 			<td class="expenses" >38</td>
 			<td>-</td>
 		</tr>
@@ -57,6 +58,28 @@
 			<td>-</td>
 			<td>Cháo</td>
 			<td class="expenses" >20</td>
+			<td>-</td>
+		</tr>
+		<!--20220721-->
+		<tr>
+			<td>4</td>
+			<td>20220721</td>
+			<td>Cháo</td>
+			<td class="expenses" >20</td>
+			<td>-</td>
+		</tr>
+		<tr>
+			<td>5</td>
+			<td>-</td>
+			<td>Cơm sườn</td>
+			<td class="expenses" >26</td>
+			<td>-</td>
+		</tr>
+		<tr>
+			<td>6</td>
+			<td>-</td>
+			<td>Yakun</td>
+			<td class="expenses" >71</td>
 			<td>-</td>
 		</tr>
 	</table>
