--- a/index.html
+++ b/index.html
@@ -126,5 +126,6 @@
     </tr>
 </table>
 <a href="./ChiTieuHangNgay.html" target="_blank">Chi tiêu hàng ngày</a>
+<a href="./KeHoachTongQuat.html" target="_blank">Kế hoạch tổng quát</a>
 </body>
 </html>
