--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <td>-</td>
     </tr>
 </table>
-<a href="./ChiTieuHangNgay.html" target="_blank">Chi tiêu hàng ngày</a>
+<a href="./ChiTieuHangNgay.html" target="_blank">Chi tiêu hàng ngày</a><br>
 <a href="./KeHoachTongQuat.html" target="_blank">Kế hoạch tổng quát</a>
 </body>
 </html>
