--- a/ChiTieuHangNgay.html
+++ b/ChiTieuHangNgay.html
@@ -144,6 +144,65 @@
 			<td class="right">20</td>
 			<td class="right">-</td>
 		</tr>
+		<!--20220723-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220723</td>
+			<td>Phở bò</td>
+			<td class="right">30</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Metro</td>
+			<td class="right">56</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Chè</td>
+			<td class="right">30</td>
+			<td class="right">-</td>
+		</tr>
+		<!--20220724-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220724</td>
+			<td>Khẩu trang</td>
+			<td class="right">40</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Kem</td>
+			<td class="right">15</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Gửi xe CV</td>
+			<td class="right">6</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Xăng</td>
+			<td class="right">100</td>
+			<td class="right">-</td>
+		</tr>
+		<!--20220725-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220725</td>
+			<td>Cà phê</td>
+			<td class="right">15</td>
+			<td class="right">-</td>
+		</tr>
 	</table>
 </body>
 </html>
