--- a/ChiTieuHangNgay.html
+++ b/ChiTieuHangNgay.html
@@ -203,6 +203,28 @@
 			<td class="right">15</td>
 			<td class="right">-</td>
 		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Bình nước</td>
+			<td class="right">25</td>
+			<td class="right">-</td>
+		</tr>
+		<!--20220726-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220726</td>
+			<td>Cháo</td>
+			<td class="right">20</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Bong bóng</td>
+			<td class="right">20</td>
+			<td class="right">-</td>
+		</tr>
 	</table>
 </body>
 </html>
