--- a/todo/20220725.html
+++ b/todo/20220725.html
@@ -14,8 +14,8 @@
 <ul>
 	<li>Scan in: 8.02</li>
     <li>Check QA</li>
-    <li>Check Email NamLe</li>
-    <li>Check Calenda</li>
+    <li>Check Email NamLe: Done</li>
+    <li>Check Calenda: Done</li>
     <li>Check nonnul</li>
     <li>Commit Memmory Usage</li>
     <li>Check CCRH issues</li>
