--- a/ChiTieuHangNgay.html
+++ b/ChiTieuHangNgay.html
@@ -225,6 +225,28 @@
 			<td class="right">20</td>
 			<td class="right">-</td>
 		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Cơm</td>
+			<td class="right">20</td>
+			<td class="right">-</td>
+		</tr>
+		<!--20220727-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220727</td>
+			<td>Bánh mì</td>
+			<td class="right">15</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Tía mượn</td>
+			<td class="right">30</td>
+			<td class="right">-</td>
+		</tr>
 	</table>
 </body>
 </html>
