--- a/ChiTieuHangNgay.html
+++ b/ChiTieuHangNgay.html
@@ -247,6 +247,27 @@
 			<td class="right">30</td>
 			<td class="right">-</td>
 		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Sữa</td>
+			<td class="right">1270</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Phô mai QBB</td>
+			<td class="right">158</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Yakun</td>
+			<td class="right">71</td>
+			<td class="right">-</td>
+		</tr>
 	</table>
 </body>
 </html>
