--- a/ChiTieuHangNgay.html
+++ b/ChiTieuHangNgay.html
@@ -184,7 +184,7 @@
 		<tr>
 			<td class ="center"></td>
 			<td>-</td>
-			<td>Gửi xe CV</td>
+			<td>Gửi xe công viên</td>
 			<td class="right">6</td>
 			<td class="right">-</td>
 		</tr>
