--- a/ChiTieuHangNgay.html
+++ b/ChiTieuHangNgay.html
@@ -268,6 +268,14 @@
 			<td class="right">71</td>
 			<td class="right">-</td>
 		</tr>
+		<!--20220728-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220728</td>
+			<td>Cháo</td>
+			<td class="right">20</td>
+			<td class="right">-</td>
+		</tr>
 	</table>
 </body>
 </html>
