--- a/ChiTieuHangNgay.html
+++ b/ChiTieuHangNgay.html
@@ -2,24 +2,22 @@
 <html>
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<!--
 	<script>
-		$(document).ready(function Sum() {
-			var expenses = $('.expenses');
-			var expenseTotal = $('#expenses_sum');
+		$(document).ready(function sumFix() {
+			var expenses = $('.fix');
+			var expenseTotal = $('#fix_sum');
 			var sum = 0;
 			$.each(expenses, function (index, object) {
 				sum = sum + parseInt($(object).html().replace(/,/g, ''));
 			})
-			expenseTotal.html(sum);
+			expenseTotal.html("Cố định: " +sum);
 		});
 	</script>
-	-->
 	<script>
 		$(document).ready(function fillNo () {
 			var table = document.getElementById('table');
-			for (var i = 2, row; row = table.rows[i]; i++) {
-				$(row.cells[0]).html(i-1);
+			for (var i = 4, row; row = table.rows[i]; i++) {
+				$(row.cells[0]).html(i-3);
 			}
 
 		});
@@ -27,11 +25,11 @@
 	<script>
 		$(document).ready(function Sum_daily () {
 			var table = document.getElementById('table');
-			var preRow = 2;
+			var preRow = 4;
 			var sum = 0;
 			var total = 0;
 			var days = 0;
-			for (var i = 2, row; row = table.rows[i]; i++) {
+			for (var i = 4, row; row = table.rows[i]; i++) {
 				total = total + parseInt($(row.cells[3]).html().replace(/,/g, ''));
 				if (row.cells[1].innerHTML != '-') {
 					preRow = i;
@@ -45,6 +43,21 @@
 			$(table.rows[0].cells[1]).html("Days: " + days);
 			$(table.rows[0].cells[2]).html("Average: " + (total/days).toFixed(2));
 			$(table.rows[0].cells[3]).html("Sum: " + total);
+		});
+	</script>
+	<script>
+		$(document).ready(function sumFloat() {
+			var total = $('#total');
+			var fixSum = $('#fix_sum');
+			var floatSum = $('#float_sum');
+			var value = parseInt(total.html().replace("Sum: ", ''))
+							- parseInt(fixSum.html().replace("Cố định: ", ''));
+			floatSum.html("Di động: " + value);
+			var avr_dyn = (value/parseInt($('#days').html().replace("Days: ", ''))).toFixed(2);
+			$('#avr_dyn').html("TB di động: "+ avr_dyn);
+			$('#duTru30').html("Dự trù (30ngày):" + (avr_dyn * 30 + parseInt(fixSum.html().replace("Cố định: ", ''))).toFixed(2));
+			$('#duTru31').html("Dự trù (31ngày):" + (avr_dyn * 31 + parseInt(fixSum.html().replace("Cố định: ", ''))).toFixed(2));
+
 		});
 	</script>
 	<meta charset="UTF-8">
@@ -66,10 +79,24 @@
 	<table id="table">
 		<tr>
 			<td></td>
-			<td></td>
-			<td></td>
-			<td class ="center" id="expenses_sum" nowrap><b></br></br>Total Records</b></td>
+			<td id="days"></td>
+			<td id="avr_sum"></td>
+			<td class ="right" id="total" nowrap><b></br></br>Total Records</b></td>
 			<td class ="center"></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td class ="right" id="fix_sum"></td>
+			<td class ="center" id ="duTru30"></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td id="avr_dyn"></td>
+			<td class ="right" id="float_sum"></td>
+			<td class ="center" id ="duTru31"></td>
 		</tr>
 		<tr>
 			<th>No.</th>
@@ -251,22 +278,22 @@
 			<td class ="center"></td>
 			<td>-</td>
 			<td>Sữa</td>
-			<td class="right">1270</td>
-			<td class="right">-</td>
+			<td class="right">0</td>
+			<td class="right">Thẻ Visa</td>
 		</tr>
 		<tr>
 			<td class ="center"></td>
 			<td>-</td>
 			<td>Phô mai QBB</td>
-			<td class="right">158</td>
-			<td class="right">-</td>
+			<td class="right">0</td>
+			<td class="right">Thẻ Visa</td>
 		</tr>
 		<tr>
 			<td class ="center"></td>
 			<td>-</td>
 			<td>Yakun</td>
-			<td class="right">71</td>
-			<td class="right">-</td>
+			<td class="right">0</td>
+			<td class="right">Thẻ Visa</td>
 		</tr>
 		<!--20220728-->
 		<tr>
@@ -274,6 +301,172 @@
 			<td>20220728</td>
 			<td>Cháo</td>
 			<td class="right">20</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Trứng</td>
+			<td class="right">14</td>
+			<td class="right">-</td>
+		</tr>
+		<!--20220729-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220729</td>
+			<td>Bún bò</td>
+			<td class="right">30</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Thuốc</td>
+			<td class="right">24</td>
+			<td class="right">-</td>
+		</tr>
+		<!--20220730-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220730</td>
+			<td>Bún mộc & Phở</td>
+			<td class="right">75</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Khu vui chơi</td>
+			<td class="right">120</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Nước</td>
+			<td class="right">10</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Trà sữa</td>
+			<td class="right">116</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Heo xiêng</td>
+			<td class="right">50</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Siêu Thị Metro</td>
+			<td class="right">648</td>
+			<td class="right">-</td>
+		</tr>
+		<!--20220731-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220731</td>
+			<td>Phở</td>
+			<td class="right">70</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Metro</td>
+			<td class="right">52</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Lolte</td>
+			<td class="right">250</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Đám giỗ</td>
+			<td class="right">500</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Bộ câu cá</td>
+			<td class="right">60</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Nước ngọt</td>
+			<td class="right">20</td>
+			<td class="right">-</td>
+		</tr>
+		<!--20220801-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220801</td>
+			<td>Ăn sáng H</td>
+			<td class="right">200</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Mua nước</td>
+			<td class="right">25</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Cà phê</td>
+			<td class="right">15</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Thanh toán Visa</td>
+			<td class="right">1703</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Nợ Standart</td>
+			<td class="right fix">13050</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Bánh canh cá lóc</td>
+			<td class="right">20</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Pizza</td>
+			<td class="right">187</td>
+			<td class="right">-</td>
+		</tr>
+		<!--20220802-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220802</td>
+			<td>Hủ tiếu H</td>
+			<td class="right">30</td>
 			<td class="right">-</td>
 		</tr>
 	</table>
