--- a/ChiTieuHangNgay.html
+++ b/ChiTieuHangNgay.html
@@ -469,6 +469,42 @@
 			<td class="right">30</td>
 			<td class="right">-</td>
 		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Decal bảng trắng</td>
+			<td class="right">60</td>
+			<td class="right">-</td>
+		</tr>
+		<!--20220802-->
+		<tr>
+			<td class ="center"></td>
+			<td>20220803</td>
+			<td>Xăng</td>
+			<td class="right">100</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Thuốc Hấu</td>
+			<td class="right">113</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Bún mộc</td>
+			<td class="right">80</td>
+			<td class="right">-</td>
+		</tr>
+		<tr>
+			<td class ="center"></td>
+			<td>-</td>
+			<td>Cước internet</td>
+			<td class="right fix">200</td>
+			<td class="right">-</td>
+		</tr>
 	</table>
 </body>
 </html>
