--- a/KeHoachTongQuat.html
+++ b/KeHoachTongQuat.html
@@ -27,147 +27,66 @@ $(document).ready(function() {
 </script>
 </head>
 <body>
-    <h1>How to migrate to EU/CAD</h1>
-    <table>
-      <tr>
-      	<th>Part</th>
-        <th>Major</th>
-        <th>Middle</th>
-        <th>Minor</th>
-        <th>Item</th>
-        <th>Time</th>
-    </tr>
-    <tr>
-    	<td>I</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>Preparation</td>
-        <td>31 years</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-        <td>1</td>
-        <td>0</td>
-        <td>0</td>
-        <td>Money</td>
-        <td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-        <td>1</td>
-        <td>1</td>
-        <td>0</td>
-        <td>Work</td>
-        <td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-        <td>1</td>
-        <td>2</td>
-        <td>0</td>
-        <td>House</td>
-        <td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-        <td>1</td>
-        <td>2</td>
-        <td>0</td>
-        <td>Company</td>
-        <td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-    	<td>1</td>
-    	<td>3</td>
-    	<td>0</td>
-    	<td>Savings fund</td>
-    	<td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-    	<td>2</td>
-    	<td>0</td>
-    	<td>0</td>
-    	<td>Languages</td>
-    	<td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-    	<td>2</td>
-    	<td>1</td>
-    	<td>0</td>
-    	<td>English</td>
-    	<td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-    	<td>2</td>
-    	<td>1</td>
-    	<td>0</td>
-    	<td>Janpanese</td>
-    	<td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-    	<td>2</td>
-    	<td>1</td>
-    	<td>0</td>
-    	<td>French</td>
-    	<td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-        <td>3</td>
-        <td>0</td>
-        <td>0</td>
-        <td>Family</td>
-        <td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-        <td>3</td>
-        <td>1</td>
-        <td>0</td>
-        <td>Time</td>
-        <td>-</td>
-    </tr>
-    <tr>
-    	<td>-</td>
-        <td>3</td>
-        <td>1</td>
-        <td>0</td>
-        <td>Car</td>
-        <td>-</td>
-    </tr>
-    <tr>
-    	<td>II</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>Implementation<td>
-        <td>45 years</td>
-    </tr>
-    <tr>
-    	<td>III</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>Retire<td>
-        <td>60 years</td>
-    </tr>
-</table>
-<a href="./ChiTieuHangNgay.html" target="_blank">Chi tiêu hàng ngày</a>
-<iframe src="./ChiTieuHangNgay.html" width="400" height="300">
-  <p>Your browser does not support iframes.</p>
-</iframe>
+    <h1>Targets</h1>
+    <ol>
+        <li>
+            Money
+            <ul>
+              <li>Savings fund</li>
+              <li>House</li>
+              <li>Tresspasses</table></tr>
+                    <ul>
+                        <li>80</li>
+                        <li>100</li>
+                        <li>210</li>
+                        <li>1700</li>
+                    </ul>
+              </li>
+            </ul>
+        </li>
+        <li>
+            Working
+            <ul>
+                <li>Worker</li>
+                <li>Shop</li>
+                <li>Company</li>
+            </ul>
+        </li>
+        <li>
+            Family
+            <ul>
+                <li>Hấu -Doctor</li>
+                <li>Gang - Catholic priest</li>
+                <li>CAD Migration</li>
+            </ul>
+        </li>
+        <li>
+            Myseft
+            <ul>
+                <li>Languages
+                    <ul>
+                        <li>English</li>
+                        <li>Japanese</li>
+                        <li>Chinese</li>
+                        <li>French</li>
+                    </ul>
+                </li>
+                <li>Knowledge
+                    <ul>
+                        <li>Fontend</li>
+                        <li>Backend</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+      <li></li>
+  </ol>
+  <iframe src="./todo/Money.html" width="400" height="300">
+  </iframe>
 
-<iframe src="./ChiTieuHangNgay.html" width="400" height="300">
-  <p>Your browser does not support iframes.</p>
-</iframe>
-<a href="#" id="link">Click Here</a>
-<iframe id="frame" width="400" height="300" src="https://www.google.com/webhp?igu=1" scrolling="yes"></iframe>
-<iframe id="frame" width="400" height="300" src="https://www.w3schools.com/pro/index.php?igu=1" scrolling="yes"></iframe>
+  <iframe src="./todo/Working.html" width="400" height="300">
+  </iframe>
+  <iframe width="400" height="300" src="./todo/Family.html" scrolling="yes"></iframe>
+  <iframe width="400" height="300" src="./todo/Myself.html" scrolling="yes"></iframe>
 </body>
 </html>
