--- a/todo/Myself.html
+++ b/todo/Myself.html
@@ -11,22 +11,30 @@
 </head>
 <body>
 <h1>Myseft</h1>
+
+<p>Websites:</p>
+<ul>
+    <li>News blog - add AD</li>
+    <li>Rich Baby shop Wordpress</li>
+    <li>XAMP php web</li>
+    <li>Java web</li>
+</ul>
+<p>Rich Baby Shop - Shop Con Nha Giau</p>
+<ul>
+    <li>Shopee</li>
+    <li>Lazada</li>
+    <li>Tiki</li>
+    <li>Sendo</li>
+</ul>
+<p>Youtuber</p>
+<ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
+
 <p>Item: Laguage - Target: English -TOEIC</p>
-<table id="table">
-    <tr>
-        <th>No.</th>
-        <th>Date</th>
-        <th>Amount</th>
-        <th>Note</th>
-    </tr>
-    <tr>
-        <td></td>
-        <td>20220818</td>
-        <td>0</td>
-        <td></td>
-    </tr>
-</table>
-<p>Item:Knowledge - Target: Web </p>
 <table id="table">
     <tr>
         <th>No.</th>
