--- a/todo/RichBabyShop.html
+++ b/todo/RichBabyShop.html
@@ -62,17 +62,17 @@
                 <li>4. Người yêu thích thể thao</li>
                 <li>5. Người thích thương hiệu</li>
             </ul>
-            <ul><b>Khách hàng</b>
-                <li>1. Các ông bố\bà mẹ trẻ tân thời</li>
-                <li>2. Áo thun du lịch gia đình</li>
-                <li>3. Các cặp đôi</li>
-                <li>4. Người yêu thích thể thao</li>
-                <li>5. Người thích thương hiệu</li>
+            <ul><b>Các thương hiệu tham khảo</b>
+                <li>1. Nous - New Born shop</li>
+                <li>2. Bubaby - Hery Kids shop</li>
+                <li>3. Tổng kho quần áo miền nam</li>
+                <li>4. Shopee</li>
             </ul>
             </td>
             <td style="vertical-align: top;">
              <ul><b>Vật tư</b>
                 <li>1. Máy in (Laser 2 mặt, copy, scan) - 4.5tr</li>
+                <ul><li>1.1 Máy in nhiệt mini 400K</li></ul>
                 <li>2. Máy tính PC - 15tr </li>
                 <li>3. Hộp giấy</li>
                 <li>4. Túi nilon</li>
