--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
     <div>
         <h1>Hello new day <a style="color:black" href="./myLife.html" target="_blank">!</a></h1>
         <p><b>Todo list</b></p>
+        <u>
+          <li> Mua mua cây hoa lài trà</li>
+          <li> Mua máy tính bàn i5 - 8G</li>
+          <li> Học lái xe</li>
+          <li> Mua xe Misubishi Attrage 200K</li>
+        </u>
         <ul>
             <li> <a href="./todo/20220725.html" target="_blank">20220725</a></li>
             <li> <a href="./todo/20220726.html" target="_blank">20220726</a></li>
