--- a/todo/RichBabyShop.html
+++ b/todo/RichBabyShop.html
@@ -8,86 +8,97 @@
         border: 1h3x solid black;
     }
 </style>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Con Nhà Giàu Shop</h1>
-    <p>htths://www.richbaby.com</p>
+    <div class="home">
+        <video autoplay muted loop>
+          <source src="ressources/cooking.mp4" type="video/mp4" />
+      </video>
+      <div class="overlay">
+          <h1 style="text-align: center;font-size:300%;color: white; font-family: Times New Roman;">Con Nhà Giàu Shop</h1>
+      </div>
+      <div class="home-content">
 
-    <table id="table">
-        <tr>
-            <th style="text-align: left;font-size:150%;">Mốc thời gian</th>
-            <th style="text-align: left;font-size:150%;">Chiến lược</th>
-            <th style="text-align: left;font-size:150%;">Yêu cầu</th>
-        </tr>
-        <tr>
-            <td>
-                <p><b style="font-size:120%;">Giai đoạn 1: </b>Mua/bán online </p>
-                <ul>
-                    <li>Shopee</li>
-                    <li>Tiki</li>
-                    <li>Lazada</li>
-                    <li>Sendo</li>
+          <a href="https://www.richbaby.com">https://www.richbaby.com</a>
+
+          <table id="table1" style="color:white;  width: 100%">
+            <tr>
+                <th style="text-align: left;font-size:150%;">Mốc thời gian</th>
+                <th style="text-align: left;font-size:150%;">Chiến lược</th>
+                <th style="text-align: left;font-size:150%;">Yêu cầu</th>
+            </tr>
+            <tr>
+                <td>
+                    <p><b style="font-size:120%;">Giai đoạn 1: </b>Mua/bán online </p>
+                    <ul>
+                        <li>Shopee</li>
+                        <li>Tiki</li>
+                        <li>Lazada</li>
+                        <li>Sendo</li>
+                    </ul>
+                    <p><b style="font-size:120%;">Giai đoạn 2: </b>Mua tại nguồn</p>
+                    <p><b style="font-size:120%;">Giai đoạn 3: </b>Chủ động đặt may</p>
+                    <p><b style="font-size:120%;">Giai đoạn 4: </b>Mở cửa hàng Trần Thị Hè</p>
+                    <p><b style="font-size:120%;">Giai đoạn 5: </b>Mở cửa hàng Nguyễn Ảnh Thủ</p>
+                    <ul>
+                        <li>Nhà kho Trần Thị Hè</li>
+                    </ul>
+                    <p><b style="font-size:120%;">Giai đoạn 6: </b>Lập công ty</p>
+                    <ul>
+                        <li>Phân phối sỉ/lẻ</li>
+                    </ul>
+                    <p><b style="font-size:120%;">Giai đoạn 7: </b>Chuỗi của hàng</p>
+                    <ul>
+                        <li>Quận 12, GV, 10, 7</li>
+                        <li>Đồng Nai</li>
+                        <li>Đà Nẵng</li>
+                        <li>Hà Nội</li>
+                    </ul>
+                </td>
+                <td style="vertical-align: top;"> 
+                   <ul><b>Sản phẩm</b>
+                    <li>1. Quần áo trẻ em cao cấp</li>
+                    <li>2. Quần áo cặp đôi và gia đình</li>
+                    <li>3. Áo thun in hình tự chọn</li>
+                    <li>4. Áo thể thao in tên và số nhanh - Không chỉ bóng đá</li>
+                    <li>5. Quần áo mang thương hiệu @RichBaby</li>
                 </ul>
-                <p><b style="font-size:120%;">Giai đoạn 2: </b>Mua tại nguồn</p>
-                <p><b style="font-size:120%;">Giai đoạn 3: </b>Chủ động đặt may</p>
-                <p><b style="font-size:120%;">Giai đoạn 4: </b>Mở cửa hàng Trần Thị Hè</p>
-                <p><b style="font-size:120%;">Giai đoạn 5: </b>Mở cửa hàng Nguyễn Ảnh Thủ</p>
-                <ul>
-                    <li>Nhà kho Trần Thị Hè</li>
+                <ul><b>Khách hàng</b>
+                    <li>1. Các ông bố\bà mẹ trẻ tân thời</li>
+                    <li>2. Áo thun du lịch gia đình</li>
+                    <li>3. Các cặp đôi</li>
+                    <li>4. Người yêu thích thể thao</li>
+                    <li>5. Người thích thương hiệu</li>
                 </ul>
-                <p><b style="font-size:120%;">Giai đoạn 6: </b>Lập công ty</p>
-                <ul>
-                    <li>Phân phối sỉ/lẻ</li>
+                <ul><b>Các thương hiệu tham khảo</b>
+                    <li>1. Nous - New Born shop</li>
+                    <li>2. Bubaby - Hery Kids shop</li>
+                    <li>3. Tổng kho quần áo miền nam</li>
+                    <li>4. Shopee</li>
+                    <li>5. Hoàng nội địa Trung/li>
+                    </ul>
+                </td>
+                <td style="vertical-align: top;">
+                   <ul><b>Vật tư</b>
+                    <li>1. Máy in (Laser 2 mặt, copy, scan) - 4.5tr</li>
+                    <ul><li>1.1 Máy in nhiệt mini 400K</li></ul>
+                    <li>2. Máy tính PC - 15tr </li>
+                    <li>3. Hộp giấy</li>
+                    <li>4. Túi nilon</li>
+                    <li>5. Máy in hình ảnh lên áo</li>
+                    <li>6. Máy thêu logo</li>
+                    <li>7. Website </li>
+                    <li>8. Hệ thống quản lý </li>
                 </ul>
-                <p><b style="font-size:120%;">Giai đoạn 7: </b>Chuỗi của hàng</p>
-                <ul>
-                    <li>Quận 12, GV, 10, 7</li>
-                    <li>Đồng Nai</li>
-                    <li>Đà Nẵng</li>
-                    <li>Hà Nội</li>
+                <ul><b>Vốn</b>
+                    <li>Nhập hàng </li>
                 </ul>
-            </td>
-            <td style="vertical-align: top;"> 
-             <ul><b>Sản phẩm</b>
-                <li>1. Quần áo trẻ em cao cấp</li>
-                <li>2. Quần áo cặp đôi và gia đình</li>
-                <li>3. Áo thun in hình tự chọn</li>
-                <li>4. Áo thể thao in tên và số nhanh - Không chỉ bóng đá</li>
-                <li>5. Quần áo mang thương hiệu @RichBaby</li>
-            </ul>
-            <ul><b>Khách hàng</b>
-                <li>1. Các ông bố\bà mẹ trẻ tân thời</li>
-                <li>2. Áo thun du lịch gia đình</li>
-                <li>3. Các cặp đôi</li>
-                <li>4. Người yêu thích thể thao</li>
-                <li>5. Người thích thương hiệu</li>
-            </ul>
-            <ul><b>Các thương hiệu tham khảo</b>
-                <li>1. Nous - New Born shop</li>
-                <li>2. Bubaby - Hery Kids shop</li>
-                <li>3. Tổng kho quần áo miền nam</li>
-                <li>4. Shopee</li>
-            </ul>
-            </td>
-            <td style="vertical-align: top;">
-             <ul><b>Vật tư</b>
-                <li>1. Máy in (Laser 2 mặt, copy, scan) - 4.5tr</li>
-                <ul><li>1.1 Máy in nhiệt mini 400K</li></ul>
-                <li>2. Máy tính PC - 15tr </li>
-                <li>3. Hộp giấy</li>
-                <li>4. Túi nilon</li>
-                <li>5. Máy in hình ảnh lên áo</li>
-                <li>6. Máy thêu logo</li>
-                <li>7. Website </li>
-                <li>8. Hệ thống quản lý </li>
-            </ul>
-            <ul><b>Vốn</b>
-                <li>Nhập hàng </li>
-            </ul>
             </td>
         </tr>
     </table>
+</div>
+</div>
 
-    
 </body>
 </html>
