--- a/todo/Myself.html
+++ b/todo/Myself.html
@@ -10,44 +10,45 @@
 </style>
 </head>
 <body>
-<h1>Myseft</h1>
+    <h1>Myseft</h1>
 
-<p>Websites:</p>
-<ul>
-    <li>News blog - add AD</li>
-    <li>Rich Baby shop Wordpress</li>
-    <li>XAMP php web</li>
-    <li>Java web</li>
-</ul>
-<p>Rich Baby Shop - Shop Con Nha Giau</p>
-<ul>
-    <li>Shopee</li>
-    <li>Lazada</li>
-    <li>Tiki</li>
-    <li>Sendo</li>
-</ul>
-<p>Youtuber</p>
-<ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-</ul>
+    <p>Websites:</p>
+    <ul>
+        <li>News blog - add AD</li>
+        <li>Rich Baby shop Wordpress</li>
+        <li>XAMP php web</li>
+        <li>Java web</li>
+    </ul>
+    <p>Rich Baby Shop - Shop Con Nha Giau</p>
+    <ul>
+        <li>Shopee</li>
+        <li>Lazada</li>
+        <li>Tiki</li>
+        <li>Sendo</li>
+    </ul>
+    <p>Yotuber</p>
+    <p>Todo list</p>
+    <ul>
+        <li> Mua mua cây hoa lài trà</li>
+        <li> Mua máy tính bàn i5 - 8G</li>
+        <li> Học lái xe</li>
+        <li> Mua xe Misubishi Attrage 200K</li>
+    </ul>
 
-<p>Item: Laguage - Target: English -TOEIC</p>
-<table id="table">
-    <tr>
-        <th>No.</th>
-        <th>Date</th>
-        <th>Amount</th>
-        <th>Note</th>
-    </tr>
-    <tr>
-        <td></td>
-        <td>20220818</td>
-        <td>0</td>
-        <td></td>
-    </tr>
-</table>
+    <p>Item: Laguage - Target: English -TOEIC</p>
+    <table id="table">
+        <tr>
+            <th>No.</th>
+            <th>Date</th>
+            <th>Amount</th>
+            <th>Note</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td>20220818</td>
+            <td>0</td>
+            <td></td>
+        </tr>
+    </table>
 </body>
 </html>
