--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       hour = minute * 60,
       day = hour * 24;
 
-      let birthday = "Sep 30, 2022 12:00:00",
+      let birthday = "Jan 01, 2025 12:00:00",
       countDown = new Date(birthday).getTime(),
       x = setInterval(function () {
           let now = new Date().getTime(),
@@ -136,7 +136,7 @@
     </div>
 
     <div class="container">
-      <h1 id="headline">Countdown to my habits'complete:</h1>
+      <h1 id="headline">Countdown to CAD:</h1>
       <div id="countdown">
         <ul>
           <li><span id="days"></span>days</li>
