--- a/todo/GeneralPlan.html
+++ b/todo/GeneralPlan.html
@@ -12,7 +12,7 @@
 <body>
     <h1>General Plan</h1>
 
-    <p><b>Target:</b>Migrate to Canada or New Zealand</p>
+    <p><b>Target:</b> Migrate to Canada or New Zealand</p>
     <ul>
         <li>Bussinessman</li>
         <li>International Employe </li>
@@ -32,6 +32,24 @@
         <li>1 sprint target: Complete task </li>
         <li>1 week target: Build plan </li>
         <li>1 day target: Complete task </li>
+    </ul>
+    <p><b>Daily schedule:</b></p>
+    <ul>
+        <table>
+            <tr><th>Time</th><th>Actions</th></tr>
+            <tr><td>4h00-4h15</td><td>Personal hygiene</td></tr>
+            <tr><td>4h15-4h30</td><td>Shouting sologan and make a plan</td></tr>
+            <tr><td>4h30-6h30</td><td>Learn</td></tr>
+            <tr><td>6h30-7h00</td><td>Physical Execercise</td></tr>
+            <tr><td>7h00-8h00</td><td>Pick Hau up to school</td></tr>
+            <tr><td>8h00-12h00</td><td>Working</td></tr>
+            <tr><td>12h00-13h00</td><td>Break</td></tr>
+            <tr><td>13h00-17h00</td><td>Working</td></tr>
+            <tr><td>17h00-18h00</td><td>Personal hygiene</td></tr>
+            <tr><td>18h00-21h00</td><td>Family</td></tr>
+            <tr><td>21h00-23h30</td><td>Learn</td></tr>
+            <tr><td>23h30-24h00</td><td>Look back and Analyze</td></tr>
+        </table>
     </ul>
     
 </body>
