--- a/todo/Myself.html
+++ b/todo/Myself.html
@@ -37,18 +37,8 @@
 
     <p>Item: Laguage - Target: English -TOEIC</p>
     <table id="table">
-        <tr>
-            <th>No.</th>
-            <th>Date</th>
-            <th>Amount</th>
-            <th>Note</th>
-        </tr>
-        <tr>
-            <td></td>
-            <td>20220818</td>
-            <td>0</td>
-            <td></td>
-        </tr>
+        <tr><th>No.</th> <th>Date</th> <th>Verification</th>  <th>Note</th></tr>
+        <tr><td>1  </td> <td>20230517</td> <td>OK</td> <td>-</td></tr>
     </table>
 </body>
 </html>
