--- a/todo/Myself.html
+++ b/todo/Myself.html
@@ -33,6 +33,11 @@
         <li> Mua máy tính bàn i5 - 8G</li>
         <li> Học lái xe</li>
         <li> Mua xe Misubishi Attrage 200K</li>
+        <li> Viết Blog</li>
+        <li> Mua bàn ghế, thước, vỡ, bảng trắng, bảng con cho Hấu</li>
+        <li> Mua củ nghệ, đen, đỏ, vàng</li>
+        <li> Database and commit</li>
+        <li> Spring</li>
     </ul>
 
     <p>Item: Laguage - Target: English -TOEIC</p>
